--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: rgb(245, 245, 245);
 }
 .about-hackathon {
   display: grid;
@@ -467,11 +468,15 @@ i.reply {
   padding-right: 15px;
   cursor: pointer;
 }
-
+footer{
+    max-width: 100%;
+}
 .footer {
   padding: 25px;
+  
   background-color: rgb(229, 229, 229);
   padding-bottom: 40px;
+  /* width: 100%; */
 }
 
 .footer > div {
@@ -512,9 +517,6 @@ i.reply {
   .dev-team {
     grid-column: 1;
     grid-row-start: 2;
-    /* width: 100%;
-        display: block; */
-    /* position:relative; */
     margin: 10px 0 0 0;
   }
 }
@@ -530,3 +532,4 @@ i.reply {
     height: 50px;
   }
 }
+
