--- a/style.css
+++ b/style.css
@@ -3,75 +3,108 @@
   box-sizing: border-box;
 }
 
+button,
+a,
+.menu,
+img {
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+hr {
+  color: darkgrey;
+  width: 25%;
+  margin: 25px auto;
+  border: none;
+  border-bottom: 1px solid darkgrey;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: rgb(245, 245, 245);
+}
 /* header */
 
 .navbar {
   background-color: white;
-  height: 60px;
+  height: 65px;
   position: fixed;
   top: 0;
   width: 100%;
   overflow: hidden;
   border-bottom: 1px solid #efefef;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+  padding: 10px 35px;
 }
 
-.navbar .container {
-  margin-left: 40px;
-  margin-right: 40px;
-}
+/* .navbar .container {
+} */
 
-.navbar-brand {
-  margin: 5px;
+/* .navbar-brand {
+   margin: 5px;
   padding: 10px;
-  display: inline-block;
-}
+  display: inline-block; 
+} */
 
 .navbar-brand a {
   text-decoration: none;
   font-size: 25px;
-  color: salmon;
+  color: black;
 }
 
-.navbar-nav {
-  margin: 5px;
-  display: inline;
-  float: right;
+.nav-buttons {
+  margin-left: auto;
+}
+.hidden {
+  display: none;
 }
 
-.navbar-nav a {
+/* .navbar-nav a {
   text-decoration: none;
   text-transform: uppercase;
   padding: 15px;
   display: inline-block;
-}
+} */
 
 .navbar-nav a:hover {
   color: rgb(168, 122, 211);
 }
 
-.search {
-  display: inline-block;
-}
-
-.search-input {
-  height: 35px;
-  border: 1px solid rgb(85, 26, 139);
+.search > form {
+  border: 1px solid rgb(225, 224, 224);
   border-radius: 10px;
-  padding: 15px;
+  padding: 5px 15px;
   outline: 0;
 }
 
-.search-input:hover,
-.search-input:focus {
-  border: 1px solid rgb(168, 122, 211);
+.search-input {
+  border: none;
+  font-size: 1.1rem;
+  outline: 0;
+}
+
+.search > form:hover,
+.search > form:focus {
+  border: 1px solid rgb(82, 80, 80);
 }
 
 .search-btn {
   background: none;
   outline: 0;
   border: 0;
-  color: rgb(85, 26, 139);
+  color: black;
   cursor: pointer;
 }
 
@@ -79,15 +112,48 @@
   color: rgb(168, 122, 211);
 }
 
+button.log-in-btn,
+button.create-account-btn {
+  color: rgb(110, 110, 110);
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding: 10px;
+  margin: 0 10px;
+  border-radius: 5px;
+}
+
+button.log-in-btn:hover {
+  background-color: rgb(218, 213, 213);
+  color: #080808;
+  text-decoration: underline;
+}
+
+button.create-account-btn {
+  color: blue;
+  border: 1px solid blue;
+}
+
+button.create-account-btn:hover {
+  background-color: blue;
+  color: white;
+  text-decoration: underline;
+}
+
 .menu {
   display: none;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background-color: rgb(245, 245, 245);
+.main {
+  line-height: 30px;
+  display: grid;
+  background-color: rgb(245, 245, 245);
+  margin-top: 65px;
+  font-size: 18px;
+  grid-template-columns: auto auto auto;
 }
+
 .about-hackathon {
   display: grid;
   background-color: white;
@@ -95,22 +161,12 @@ body {
   border: 1px solid #efefef;
   border-radius: 10px;
 }
-
-.main {
-  line-height: 30px;
-  display: grid;
-  background-color: rgb(245, 245, 245);
-  margin-top: 60px;
-  font-size: 20px;
-  grid-template-columns: auto auto auto;
-}
-
 .summary {
   border-radius: 12px;
   /* width: 60%; */
   background-color: transparent;
   margin: 25px;
-  margin-left: 50px;
+  margin-left: 35px;
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -123,6 +179,8 @@ body {
   margin: 25px 35px;
   height: fit-content;
   background: rgb(250, 250, 250);
+  position: sticky;
+  top: 90px;
 }
 
 .summary span {
@@ -162,24 +220,6 @@ body {
 .msg-from > img {
   width: 50px;
   height: 50px;
-}
-
-h2 {
-  margin-top: 20px;
-  margin-bottom: 15px;
-}
-
-p {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-hr {
-  color: darkgrey;
-  width: 25%;
-  margin: 25px auto;
-  border: none;
-  border-bottom: 1px solid darkgrey;
 }
 
 .categories span {
@@ -468,12 +508,10 @@ i.reply {
   padding-right: 15px;
   cursor: pointer;
 }
-footer{
-    max-width: 100%;
-}
+
 .footer {
   padding: 25px;
-  
+
   background-color: rgb(229, 229, 229);
   padding-bottom: 40px;
   /* width: 100%; */
@@ -489,16 +527,41 @@ footer{
     display: none;
   }
 
+  .navbar {
+    padding: 10px;
+  }
+
   .menu {
-    display: block;
-    float: right;
+    display: flex;
+    background-color: transparent;
     margin-top: 5px;
-    padding: 15px;
-    color: rgb(85, 26, 139);
+    padding: 5px;
+    color: black;
   }
 
   .menu:hover {
-    color: rgb(168, 122, 211);
+    color: #808080;
+  }
+
+  .search-input {
+    display: none;
+  }
+
+  .log-in-btn {
+    display: none;
+  }
+
+  .nav-buttons {
+    margin-left: 0;
+  }
+
+  .search {
+    margin-left: auto;
+  }
+
+  .search > form,
+  .search > form:hover {
+    border: 0;
   }
 }
 
@@ -532,4 +595,3 @@ footer{
     height: 50px;
   }
 }
-
