--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .navbar {
   background-color: white;
-  height: 65px;
+  height:fit-content;
   position: fixed;
   top: 0;
   width: 100%;
@@ -47,6 +47,7 @@ body {
   align-items: center;
   column-gap: 15px;
   padding: 10px 35px;
+  box-shadow:0px 0px 5px 0 rgb(137, 135, 135);
 }
 
 /* .navbar .container {
@@ -58,10 +59,10 @@ body {
   display: inline-block; 
 } */
 
-.navbar-brand a {
-  text-decoration: none;
-  font-size: 25px;
-  color: black;
+.navbar-brand img {
+  width:auto;
+  height:40px
+  
 }
 
 .nav-buttons {
@@ -87,6 +88,7 @@ body {
   border-radius: 10px;
   padding: 5px 15px;
   outline: 0;
+  height:40px
 }
 
 .search-input {
@@ -122,8 +124,36 @@ button.create-account-btn {
   padding: 10px;
   margin: 0 10px;
   border-radius: 5px;
+  height:40px
 }
-
+.content-names{
+  display: flex;
+}
+.event-details>.content-names>a{
+  font-size:1rem;
+  color:#3d3d3d;
+  padding:5px;
+  
+}
+.event-details>.content-names span{
+  font-size:1rem;
+}
+.event-details>.content-names>a:hover{
+  border-radius: 5px;
+  color:black
+}
+a.appwritehack:hover{
+  background-color: rgba(242,46,101,0.10);
+  border:1px solid #f1a5bb;
+}
+a.appwrite:hover{
+  background-color:rgba(59, 73, 223, 0.10);
+  border:1px solid rgb(59,73,223)
+}
+a.meta:hover{
+  background-color: rgba(0, 0, 0, 0.10) ;
+  border:1px solid rgb(0,0,0)
+}
 button.log-in-btn:hover {
   background-color: rgb(218, 213, 213);
   color: #080808;
@@ -147,7 +177,7 @@ button.create-account-btn:hover {
 
 /* main section */
 .main {
-  line-height: 30px;
+  line-height: 1.4em;
   display: grid;
   background-color: rgb(245, 245, 245);
   margin-top: 65px;
@@ -191,18 +221,20 @@ button.create-account-btn:hover {
 
 .summary a {
   text-decoration: none;
-  color: rgb(85, 26, 139);
+  /* color: rgb(85, 26, 139); */
+  color:black;
   display: inline-block;
 }
 
 .summary a:hover {
-  color: rgb(168, 122, 211);
+  /* color: rgb(168, 122, 211); */
+  color:rgb(47,58,178);
 }
 
-.content-names > a {
+/* .content-names > a {
   display: inline;
   padding: 5px;
-}
+} */
 
 .summary h1 {
   font-weight: 700px;
@@ -214,18 +246,18 @@ button.create-account-btn:hover {
 
 .msg-from {
   display: flex;
-  column-gap: 5px;
+  column-gap: 10px;
   margin-bottom: 15px;
 }
 
 .msg-from > img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
-.categories span {
-  color: black;
-  font-size: 1.2rem;
+.categories div{
+  padding-bottom: 8px;
+  
 }
 
 .appwrite-card {
@@ -269,15 +301,54 @@ a.follow-aw {
   width: 100%;
   margin-top: 15px;
 }
+.prizes{
+  margin-top:5px;
+  padding-top: 15px;
+  margin-bottom: 15px;
+}
+.prizes >ul{
+  padding-top:5px;
+  padding-bottom:18px;
 
+}
+.how-to a{
+  color:blue
+}
+.community,.dates,.rules,.additional-notes{
+  margin-top:20px;
+  margin-bottom:20px
+  
+}
+.additional-notes li{
+padding-top:5px;
+padding-bottom: 5px;
+}
+
+code{
+  background: rgba(0,0,0,0.1);
+  border-radius: 5px;
+  padding:3px 5px;
+  font-size: 0.9rem;
+}
+.rules a{
+  text-decoration: underline;
+  color:blue;
+}
+.dates>ul{
+  padding-top: 10px;
+}
 .dicussions {
-  padding: 50px;
+  padding: 50px 0;
 
   border-top: 1px solid darkgray;
+  /* border-bottom: 1px solid darkgray;
+  border-bottom-left-radius:5px ;
+  border-bottom-right-radius:5px */
 }
 
 .dicussions span.news-card-img {
   margin-top: 15px;
+  
 }
 
 .dicussions .news-card {
@@ -349,7 +420,7 @@ span.likes {
 }
 
 span.likes {
-  margin-right: 50px;
+  margin-right: 25px;
 }
 
 .reply {
@@ -393,7 +464,7 @@ i.reply {
   background-color: rgb(250, 250, 250);
   border-radius: 10px;
   border: 3px solid #efefef;
-  padding: 30px 50px;
+  padding: 30px ;
   margin-bottom: 20px;
 }
 
@@ -407,7 +478,7 @@ i.reply {
 
 .news-card-img > img {
   width: 100%;
-  border-radius: 50%;
+  border-radius: 50% !important;
   flex-direction: column;
   cursor: pointer;
 }
@@ -527,9 +598,18 @@ i.reply {
   .navbar-nav {
     display: none;
   }
-
+.main{
+  font-size: 16px;
+}
+.read-next{
+  padding:15px
+}
   .navbar {
     padding: 10px;
+    column-gap: 5px;
+  }
+  .event-details{
+    padding:15px
   }
 
   .menu {
@@ -543,6 +623,10 @@ i.reply {
   .menu:hover {
     color: #808080;
   }
+.follow,.about-dev-team{
+  padding-right:15px;
+  padding-left:15px
+}
 
   .search-input {
     display: none;
@@ -558,7 +642,8 @@ i.reply {
 
   .search {
     margin-left: auto;
-    width:fit-content
+    width:fit-content;
+    
   }
   button.search-btn{
     padding:0
@@ -566,7 +651,8 @@ i.reply {
   .search > form,
   .search > form:hover {
     border: 0;
-    padding:0
+    padding:0;
+    height:fit-content
   }
 }
 
