--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background: rgb(245, 245, 245);
+}
+
 .main button,
 .main a,
 .main .menu,
@@ -13,28 +17,27 @@
 .main h2 {
   margin-top: 20px;
   margin-bottom: 15px;
+  font-weight: 700;
 }
 
-.main p {
+/* .main p {
   margin-top: 10px;
   margin-bottom: 10px;
-}
+} */
 
 .main hr {
   color: darkgrey;
   width: 25%;
   margin: 25px auto;
   border: none;
-  border-bottom: 1px solid darkgrey;
+  border-bottom: 3px solid darkgrey;
 }
-.main{
+
+.main {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: rgb(245, 245, 245);
-  width: 100vw;
 }
-
-
 
 /* main section */
 .main {
@@ -43,8 +46,7 @@
   background-color: rgb(245, 245, 245);
   margin-top: 60px;
   font-size: 18px;
-  grid-template-columns: auto auto auto;
-  
+  grid-template-columns: auto auto auto auto;
 }
 
 .about-hackathon {
@@ -53,45 +55,48 @@
   margin-bottom: 20px;
   border: 1px solid #efefef;
   border-radius: 10px;
-  
 }
+
 .summary {
   border-radius: 12px;
   /* width: 60%; */
   background-color: transparent;
-  margin: 25px;
-  margin-left: 35px;
-  
+  margin: 15px;
+  margin-left: 0;
+
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 4;
 }
 
 .dev-team {
   border-radius: 12px;
   max-width: 100%;
-  grid-column: 3;
-  margin: 25px 35px;
+  grid-column: 4;
+  margin: 15px 0;
+
   height: fit-content;
   background: rgb(250, 250, 250);
   position: sticky;
-  top: 90px;
+  top: 85px;
 }
-
+.banner img {
+  border-radius: 9px;
+}
 .summary span {
   color: darkgrey;
   font-size: 0.8rem;
 }
 
-.summary a {
+.summary .msg-from-sec a {
   text-decoration: none;
   /* color: rgb(85, 26, 139); */
-  color:black;
+  color: black;
   display: inline-block;
 }
 
 .summary a:hover {
   /* color: rgb(168, 122, 211); */
-  color:rgb(47,58,178);
+  color: rgb(47, 58, 178);
 }
 
 /* .content-names > a {
@@ -102,10 +107,24 @@
 .summary h1 {
   font-weight: 700px;
 }
-
-.event-details {
-  padding: 30px;
+.reply,.icon,.likes-amt{
+  font-size:0.9rem;
+  color:#3d3d3d
 }
+.news-card {
+  display: flex;
+  margin-top: 1.5rem;
+  column-gap: 15px;
+  align-items: flex-start;
+}
+
+.news-card-img > img {
+  border-radius: 50% !important;
+  flex-direction: column;
+  width:50px;
+  height:50px
+}
+
 
 .msg-from {
   display: flex;
@@ -113,14 +132,23 @@
   margin-bottom: 15px;
 }
 
+.msg-from span {
+  color: #717171;
+  font-size: 0.75rem;
+}
+
 .msg-from > img {
   width: 40px;
   height: 40px;
+  border-radius: 8px;
 }
 
-.categories div{
+.categories div {
   padding-bottom: 8px;
-  
+}
+
+.aw-resources a {
+  text-decoration: none;
 }
 
 .appwrite-card {
@@ -131,27 +159,29 @@
   display: grid;
   column-gap: 15px;
   grid-template-columns: auto auto;
-  padding: 20px;
+  padding: 0.5rem;
 }
 
 .appwrite-card img {
   width: 50px;
-  margin-left: 15px;
+  /* margin-left: 15px; */
 }
 
 a.follow-aw {
-  color: rgb(168, 122, 211);
+  color: rgb(59, 73, 223);
+  line-height: 1.55rem;
 }
 
 .follow-aw-btn {
-  width: 80px;
-  height: 30px;
-  color: #d32859;
-  background-color: #ffddf6;
+  width: min-content;
+  height: min-content;
+  color: #f02e65;
+  padding: 5px 10px;
+  background-color: #fef8fa;
   outline: none;
   border: none;
-  border-radius: 5px;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 1rem;
   text-align: center;
 }
 
@@ -164,54 +194,57 @@ a.follow-aw {
   width: 100%;
   margin-top: 15px;
 }
-.prizes{
-  margin-top:5px;
+
+.prizes {
+  margin-top: 5px;
   padding-top: 15px;
   margin-bottom: 15px;
 }
-.prizes >ul{
-  padding-top:5px;
-  padding-bottom:18px;
 
-}
-.how-to a{
-  color:blue
-}
-.community,.dates,.rules,.additional-notes{
-  margin-top:20px;
-  margin-bottom:20px
-  
-}
-.additional-notes li{
-padding-top:5px;
-padding-bottom: 5px;
+.prizes > ul {
+  padding-top: 5px;
+  padding-bottom: 18px;
 }
 
-code{
-  background: rgba(0,0,0,0.1);
+.how-to a {
+  color: blue;
+}
+
+.community,
+.dates,
+.rules,
+.additional-notes {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.additional-notes li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+code {
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding:3px 5px;
+  padding: 3px 5px;
   font-size: 0.9rem;
 }
-.rules a{
+
+.rules a {
   text-decoration: underline;
-  color:blue;
+  color: blue;
 }
-.dates>ul{
+
+.dates > ul {
   padding-top: 10px;
 }
-.discussions {
-  padding: 50px 30px;
-
-  border-top: 1px solid darkgray;
-  /* border-bottom: 1px solid darkgray;
-  border-bottom-left-radius:5px ;
-  border-bottom-right-radius:5px */
+.read-next {
+  background-color: rgb(250, 250, 250);
+  border-radius: 10px;
+  border: 3px solid #efefef;
 }
-
 .discussions span.news-card-img {
   margin-top: 15px;
-  
 }
 
 .discussions .news-card {
@@ -248,6 +281,10 @@ code{
   background-color: lightgray;
 }
 
+.forum-item-postedby-img > img {
+  margin-top: 0.5rem;
+}
+
 .main textarea {
   border: 1px solid lightgray;
   outline: 0;
@@ -273,18 +310,18 @@ code{
   align-items: space-between;
   margin-top: 25px;
 }
-.add-dis-img{
-  width:30px;
-  height:30px
+
+.add-dis-img {
+  width: 30px;
+  height: 30px;
 }
+
 span.name {
   color: black;
   font-weight: 600;
   font-size: 1.2rem;
   padding-right: 10px;
 }
-
-
 
 .view-all-discussions > button,
 .follow > button {
@@ -313,29 +350,6 @@ span.name {
   color: #bdbdbd;
 }
 
-.read-next {
-  background-color: rgb(250, 250, 250);
-  border-radius: 10px;
-  border: 3px solid #efefef;
-  padding: 30px ;
-  margin-bottom: 20px;
-}
-
-.news-card {
-  display: flex;
-  margin-bottom: 10px;
-  margin-top: 25px;
-  column-gap: 15px;
-  align-items: flex-start;
-}
-
-.news-card-img > img {
-  width: 100%;
-  border-radius: 50% !important;
-  flex-direction: column;
-  cursor: pointer;
-}
-
 .news-card-name {
   font-size: 1.5rem;
   color: rgb(64, 64, 64);
@@ -359,7 +373,7 @@ span.name {
 .banner img {
   overflow: hidden;
   max-width: 100%;
-  border-radius: 12px;
+  /* border-radius: 12px; */
 }
 
 .dev-team > .contain {
@@ -371,7 +385,7 @@ span.name {
 }
 
 .follow {
-  padding: 0 30px 30px 30px;
+  /* padding: 0 30px 30px 30px; */
 
   background-color: white;
   border-radius: 15px;
@@ -414,11 +428,11 @@ span.name {
 .about-dev-team {
   background-color: white;
   border-radius: 15px;
-  padding: 30px;
+  /* padding: 30px; */
 }
 
 .about-dev-team > p {
-  padding: 15px;
+  /* padding: 15px; */
   border: 1px solid rgb(235, 235, 235);
   border-radius: 3px;
 }
@@ -446,26 +460,19 @@ span.name {
   text-align: center;
   line-height: 2;
 }
-.forum-item-postedby-img > img {
-width:25px;
-height:25px
-} 
 
-.fa {
-  color: #6b6d6f !important;
-  font-size: 1rem !important;
-}
-.icon-color {
-  color: black !important;
- 
+.icon {
+  cursor: pointer;
 }
 
 .upvote:focus {
   color: #ff00bb;
 }
+
 .bookmark > i {
   padding: 4px 2px;
 }
+
 .post-title {
   color: black;
   font-size: large;
@@ -475,34 +482,42 @@ height:25px
 .dropdown-toggle::after {
   content: none;
 }
+
 #floatingTextarea {
   border: none;
   /* overflow-y: scroll; */
   outline: none;
   box-shadow: none;
-  
+
   resize: none;
 }
+
 .com-sec {
-  border: 1px solid #ced4da;
-  border-radius:8px
+  border: 1px solid #d0d0d0;
+  border-radius: 8px;
+  padding: 0.875rem;
+  padding-top: 0.3rem;
 }
-.forum-item-postedby-img >img {
-  display: none;
+
+.forum-item-postedby-img > img {
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 100%;
 }
 
 .profile-card {
   border: 1px solid gray;
   border-radius: 8px;
 }
+
 .profile-box {
   width: fit-content;
   position: absolute;
   background-color: white;
   z-index: 2;
 }
+
 @media (min-width: 375px) {
- 
   .forum-item-postedby-img > img {
     display: block;
     width: 40px;
@@ -510,52 +525,99 @@ height:25px
     border-radius: 100%;
   }
 }
+
 @media screen and (min-width: 521px) {
   .news-card-img > img {
     width: 63px;
     height: 63px;
   }
 
-  .forum-item-postedby-img  > img {
+  .forum-item-postedby-img > img {
     width: 50px;
     height: 50px;
   }
+}
+.main {
+  font-size: 1.12rem;
+}
+.follow {
+  padding: 0rem 1rem 1rem 1rem;
+}
 
-  
+.about-dev-team {
+  padding: 1rem;
+  line-height: 1.2;
 }
-@media screen and (max-width: 768px) {
-  .navbar-nav {
-    display: none;
+.about-dev-team div {
+  padding: 1rem;
+}
+.about-dev-team img {
+  width: 80px;
+  height: 80px;
+}
+.about-dev-team p {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 991px) {
+  .main {
+    grid-template-rows: auto auto;
+    padding:0
   }
-.main{
-  font-size: 16px;
+.banner img{
+  border-radius: 0;
 }
-.read-next{
-  padding:15px
-}
- 
-  .event-details{
-    padding:15px 20px;
-    
+  .summary {
+    grid-column: 1;
+    grid-row-start: 1;
+    width: 100%;
+    margin: 0;
+  }
+
+  .dev-team {
+    grid-column: 1;
+    grid-row-start: 2;
+    margin: 10px 0 ;
+  }
+  
+
+
+  .about-dev-team {
+    padding: 1rem;
+    line-height: 1.2;
+  }
+  .about-dev-team div {
+    padding: 1rem;
   }
   .discussions {
-    padding: 50px 1rem;}
+    padding: 2rem 4rem;
 
-  .menu {
-    display: flex;
-    background-color: transparent;
-    margin-top: 4px;
-    padding: 5px;
-    color: black;
+  }
+ 
+  .read-next {
+    padding: 2rem 4rem;
+    margin-bottom: 1rem;
   }
 
-  .menu:hover {
-    color: #808080;
+ 
+
+  .follow {
+    padding: 0rem 1rem 1rem 1rem;
   }
-.follow,.about-dev-team{
-  padding-right:15px;
-  padding-left:15px
-}
+
+  .about-dev-team {
+    padding: 1rem;
+    line-height: 1.2;
+  }
+  .about-dev-team div {
+    padding: 1rem;
+  }
+
+  .follow,
+  .about-dev-team {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
 
   .search-input {
     display: none;
@@ -569,47 +631,143 @@ height:25px
     margin-left: 0;
   }
 
-.main  .search {
+  .main .search {
     margin-left: auto;
-    width:fit-content;
-    
+    width: fit-content;
   }
-  button.search-btn{
-    padding:0
+
+  button.search-btn {
+    padding: 0;
   }
+
   .search > form,
   .search > form:hover {
     border: 0;
-    padding:0;
-    height:fit-content
+    padding: 0;
+    height: fit-content;
   }
+
 }
-.post-comment{
-  border:1px solid lightgray;
+
+.post-comment {
+  border: 1px solid lightgray;
   border-radius: 5px;
 }
+ 
 
-
-@media screen and (max-width: 1023px) {
+@media (min-width: 1024px) {
+  .event-details {
+    padding: 0 3rem;
+    padding-top: 0;
+  }
   .main {
-    grid-template-rows: auto auto;
+    margin-top: 70px;
+  }
+  .msg-from-sec {
+    padding: 2rem 3rem 0;
+  }
+  
+  .discussions {
+    padding: 2rem 3rem;
+    
+  }
+  
+  .read-next {
+    padding: 2rem 3rem;
+    margin-bottom: 1rem;
+  }
+  
+  
+}
+
+/* 2560px ends */
+
+
+@media (max-width:1024px){
+  .event-details {
+    padding: 0 2rem;
+    padding-top: 0;
+  }
+  .main {
+    margin-top: 60px;
+  }
+  .msg-from-sec {
+    padding: 2rem 2rem 0;
+  }
+  
+  .discussions {
+    padding: 2rem 2rem;
+
+  }
+ 
+  .read-next {
+    padding: 2rem 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  
+  .about-dev-team p {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width:768px){
+  .event-details {
+    padding: 0 1.25rem;
+    padding-top: 0;
+  }
+  .msg-from-sec {
+    padding: 1.25rem 1.25rem 0;
+  }
+  
+  .discussions {
+    padding: 1.25rem 1.25rem;
+    
+  }
+  
+  .read-next {
+    padding: 1.25rem 1.25rem;
+    margin-bottom: 1rem;
+  }
+  
+  
+
+}
+
+
+@media (max-width:640px){
+  .event-details {
+    padding: 0.75rem;
+    padding-top: 0;
+  }
+  .msg-from-sec {
+    padding: 0.75rem 0.75rem 0;
   }
 
-  .summary {
-    grid-column: 1;
-    grid-row-start: 1;
-    width: 100%;
-    margin: 0;
-  }
+  .discussions {
+    padding: 0.75rem 0.75rem;
 
-  .dev-team {
-    grid-column: 1;
-    grid-row-start: 2;
-    margin: 10px 0 0 0;
+  }
+ 
+  .read-next {
+    padding: 0.75rem 0.75rem;
+    margin-bottom: 1rem;
   }
 }
-@media (min-width: 1024px){
-.main{
-  margin-top: 70px;
+
+.discussions{
+  border-top: 1px solid darkgray;
 }
+
+
+
+
+
+  
+
+@media (min-width:991px) and (max-width:1024px){
+  .dev-team{
+    top:75px
+  }
 }
+
