--- a/style.css
+++ b/style.css
@@ -396,9 +396,15 @@ code {
   cursor: pointer;
   width:100%
 }
-
-.news-card-name:hover {
-  color: rgb(168, 122, 211);
+.dev-team-card:hover{
+  color:rgb(168, 122, 211);
+  cursor: pointer
+}
+.news-card:hover{
+  background: white;
+}
+.news-card-name:hover{
+  color:rgb(168, 122, 211);
 }
 
 .news-card-name span {
@@ -492,11 +498,19 @@ code {
   margin-top:1rem;
   margin-bottom: 1.5rem;
 }
-.improve,.view-discussions{
+.view-discussions{
 background: #b7b5b5;
 }
-.improve a,.view-discussions a{
+.view-discussions a{
   color:black
+}
+.improve,.report-article,.save-article {
+  border:1px solid #717171;
+  margin-right: 1rem;
+}
+.improve:hover,.report-article:hover,.save-article:hover{
+  background:black;
+  color:white
 }
 
 .icon {
@@ -577,6 +591,9 @@ background: #b7b5b5;
   height: 24px;
   border-radius: 100%;
 }
+.filter{
+  z-index:9
+}
 @media (min-width: 375px) {
   .forum-item-postedby-img > img {
     display: block;
@@ -607,6 +624,9 @@ background: #b7b5b5;
 .about-dev-team {
   padding: 1rem;
   line-height: 1.2;
+  border-top:35px solid #080808
+}
+.follow-sub{
   border-top:35px solid #080808
 }
 .about-dev-team div {
